--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ billiard==3.5.0.5
 celery==4.2.1
 certifi==2018.11.29
 chardet==3.0.4
-Django==2.1.4
+django>=2.1.6
 django-celery-beat==1.4.0
 django-celery-results==1.0.4
 django-timezone-field==3.0
